<resources>
    <string name="app_name">Insta App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="submit_button">Submit</string>

    <string name="confirmPassword">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="email">E-Mail</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_group">Groups</string>
    <string name="title_contacts">Contacts</string>
    <string name="txtViewDoNotHaveAccount">Don\'t have an account?</string>
    <string name="signinwith">Sign in with</string>
    <string name="txtViewAlreadyRegistered">Have an account? Login here</string>
    <string name="logout">Logout</string>
    <string name="typemobilenumber">Type mobile number</string>
    <string name="messagetext">Type your message</string>
    <string name="groupname">Enter Group Name</string>
    <string name="members">Members :</string>
    <string name="time">Time</string>
    <string name="send_via">Send Via</string>
    <string name="now">Now</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="time2">Time2</string>
    <string name="title_activity_choose_reciver">ChooseReciverActivity</string>
    <string name="tab_text_1">Groups</string>
    <string name="tab_text_2">Contacts</string>
    <string name="title_pending">Pending</string>
    <string name="title_completed">Completed</string>
    <string name="tvinitnumber">010</string>
    <string name="choosesendingway">Choose sending way</string>
    <string name="whatsthenSMS">WhatsApp to all then SMS to others</string>
    <string name="smstoall">SMS to all</string>
    <string name="smsthenwhats">SMS to all with same carier and whatsapp to others</string>
    <string name="first_name">Your Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="done_button">Done</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
